Fixed a weird UI autolayout issue

--- a/Weather/Base.lproj/Main.storyboard
+++ b/Weather/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Weather View Controller-->
@@ -20,29 +21,34 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IjK-Qa-Yzv">
                                 <rect key="frame" x="234" y="169" width="133" height="111"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="133" id="TFt-99-IiT"/>
+                                    <constraint firstAttribute="height" constant="111" id="PxR-mm-pT4"/>
+                                    <constraint firstAttribute="width" constant="133" id="cHj-8x-dcN"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHZ-uj-IIM">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Temperature" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHZ-uj-IIM">
                                 <rect key="frame" x="252" y="302" width="97" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1a-2F-g6w">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Main" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I1a-2F-g6w">
                                 <rect key="frame" x="282" y="331" width="37" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UB0-Ii-vTX">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UB0-Ii-vTX">
                                 <rect key="frame" x="257" y="360" width="87" height="21"/>
                                 <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVP-ih-Njx">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVP-ih-Njx">
                                 <rect key="frame" x="194" y="103" width="213" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="213" id="33W-oZ-ptr"/>
+                                    <constraint firstAttribute="height" constant="58" id="N1P-gh-weZ"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="49"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -57,20 +63,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="IjK-Qa-Yzv" firstAttribute="top" secondItem="RVP-ih-Njx" secondAttribute="bottom" constant="8" id="0EI-Ep-0md"/>
-                            <constraint firstItem="UB0-Ii-vTX" firstAttribute="top" secondItem="I1a-2F-g6w" secondAttribute="bottom" constant="8" symbolic="YES" id="3lg-rg-HQR"/>
-                            <constraint firstItem="oX5-fG-ogD" firstAttribute="leading" secondItem="9C1-Wx-hYb" secondAttribute="leading" id="5JO-EJ-fSa"/>
-                            <constraint firstItem="I1a-2F-g6w" firstAttribute="top" secondItem="gHZ-uj-IIM" secondAttribute="bottom" constant="8" symbolic="YES" id="OB9-bd-kUH"/>
-                            <constraint firstItem="RVP-ih-Njx" firstAttribute="top" secondItem="oX5-fG-ogD" secondAttribute="bottom" constant="8" id="SKD-V6-a6K"/>
-                            <constraint firstItem="gHZ-uj-IIM" firstAttribute="centerX" secondItem="IjK-Qa-Yzv" secondAttribute="centerX" id="V5M-Lp-DDT"/>
-                            <constraint firstAttribute="trailing" secondItem="oX5-fG-ogD" secondAttribute="trailing" id="XQY-xo-2si"/>
-                            <constraint firstItem="gHZ-uj-IIM" firstAttribute="top" secondItem="IjK-Qa-Yzv" secondAttribute="bottom" constant="22" id="aca-MJ-vQB"/>
-                            <constraint firstItem="oX5-fG-ogD" firstAttribute="top" secondItem="psE-cz-EBP" secondAttribute="bottom" id="eSf-T3-qPa"/>
-                            <constraint firstItem="oX5-fG-ogD" firstAttribute="centerX" secondItem="RVP-ih-Njx" secondAttribute="centerX" id="hVO-z9-mgE"/>
-                            <constraint firstItem="IjK-Qa-Yzv" firstAttribute="centerX" secondItem="RVP-ih-Njx" secondAttribute="centerX" id="iOy-0S-79T"/>
-                            <constraint firstItem="ySo-Ve-I22" firstAttribute="top" secondItem="UB0-Ii-vTX" secondAttribute="bottom" constant="219" id="pBd-Fq-YeW"/>
-                            <constraint firstItem="gHZ-uj-IIM" firstAttribute="centerX" secondItem="I1a-2F-g6w" secondAttribute="centerX" id="qVx-P0-OsL"/>
-                            <constraint firstItem="I1a-2F-g6w" firstAttribute="centerX" secondItem="UB0-Ii-vTX" secondAttribute="centerX" id="zS8-eY-ihq"/>
+                            <constraint firstItem="UB0-Ii-vTX" firstAttribute="top" secondItem="I1a-2F-g6w" secondAttribute="bottom" constant="8" id="6Df-bh-VTX"/>
+                            <constraint firstItem="IjK-Qa-Yzv" firstAttribute="top" secondItem="RVP-ih-Njx" secondAttribute="bottom" constant="8" id="IAL-vI-AO7"/>
+                            <constraint firstItem="I1a-2F-g6w" firstAttribute="top" secondItem="gHZ-uj-IIM" secondAttribute="bottom" constant="8" id="JoW-Nq-CH6"/>
+                            <constraint firstItem="oX5-fG-ogD" firstAttribute="leading" secondItem="9C1-Wx-hYb" secondAttribute="leadingMargin" constant="-20" id="R3f-P7-XHv"/>
+                            <constraint firstItem="IjK-Qa-Yzv" firstAttribute="centerX" secondItem="RVP-ih-Njx" secondAttribute="centerX" id="T7d-y6-kDn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="oX5-fG-ogD" secondAttribute="trailing" constant="-20" id="T8H-yq-9uN"/>
+                            <constraint firstItem="UB0-Ii-vTX" firstAttribute="centerX" secondItem="I1a-2F-g6w" secondAttribute="centerX" id="V22-Ra-ko0"/>
+                            <constraint firstItem="RVP-ih-Njx" firstAttribute="centerX" secondItem="oX5-fG-ogD" secondAttribute="centerX" id="bBf-wO-0GX"/>
+                            <constraint firstItem="oX5-fG-ogD" firstAttribute="top" secondItem="psE-cz-EBP" secondAttribute="bottom" id="nqm-JX-y6L"/>
+                            <constraint firstItem="gHZ-uj-IIM" firstAttribute="top" secondItem="IjK-Qa-Yzv" secondAttribute="bottom" constant="22" id="oq6-ws-yxF"/>
+                            <constraint firstItem="I1a-2F-g6w" firstAttribute="centerX" secondItem="gHZ-uj-IIM" secondAttribute="centerX" id="uQA-UZ-bRA"/>
+                            <constraint firstItem="RVP-ih-Njx" firstAttribute="top" secondItem="oX5-fG-ogD" secondAttribute="bottom" constant="8" id="ulQ-Pc-OAG"/>
+                            <constraint firstItem="gHZ-uj-IIM" firstAttribute="centerX" secondItem="IjK-Qa-Yzv" secondAttribute="centerX" id="wnU-Uf-SDG"/>
                         </constraints>
                     </view>
                     <connections>
